--- a/src/templates/03_ads-advertisers.twig
+++ b/src/templates/03_ads-advertisers.twig
@@ -9,47 +9,15 @@
 {#HOME ADVERTISERS#}
 	<div class="std-adv"  style="background-image: url(img/contact-us-bg.jpg)">
 		<div class="std-adv__container container">
-			<h1 class="std-adv__title">Welcome back !</h1>
+			<h1 class="std-adv__title">Your Campaigns</h1>
 			<div class="std-adv__content">
 				{#ADV TABLE#}
 				<div class="adv-table adv-table_ads-adv">
-					{#ADV TABLE HEAD#}
-					<div class="adv-table__head">
-						<div class="adv-table__column">
-							<p class="adv-table__title">#</p>
-						</div>
-						<div class="adv-table__column">
-							<p class="adv-table__title">Title</p>
-						</div>
-						<div class="adv-table__column">
-							<p class="adv-table__title">Title</p>
-						</div>
-						<div class="adv-table__column">
-							<p class="adv-table__title">Ad type</p>
-						</div>
-						<div class="adv-table__column">
-							<p class="adv-table__title">Ad complete</p>
-						</div>
-						<div class="adv-table__column">
-							<p class="adv-table__title">Approved by admin</p>
-						</div>
-						<div class="adv-table__column">
-							<p class="adv-table__title">Campaigns</p>
-						</div>
-						<div class="adv-table__column">
-							<p class="adv-table__title">Options</p>
-						</div>
-					</div>
-					{#/ADV TABLE HEAD#}
-
-					{#ADV TABLE BODY#}
-					<div class="adv-table-body">
-						<div class="adv-table-row">
+					<div class="adv-table__wrap">
+						{#ADV TABLE HEAD#}
+						<div class="adv-table__head">
 							<div class="adv-table__column">
 								<p class="adv-table__title">#</p>
-							</div>
-							<div class="adv-table__column">
-								<p class="adv-table__title">Title</p>
 							</div>
 							<div class="adv-table__column">
 								<p class="adv-table__title">Title</p>
@@ -70,8 +38,273 @@
 								<p class="adv-table__title">Options</p>
 							</div>
 						</div>
+						{#/ADV TABLE HEAD#}
+
+						{#ADV TABLE BODY#}
+						<div class="adv-table__body">
+							<div class="adv-table__body-inner">
+								{#ROW#}
+								<div class="adv-table__row">
+									<div class="adv-table__column">
+										<p class="adv-table__text">9</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Kalista</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Banners Vertical</p>
+										<p class="adv-table__text">120x240</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">0</p>
+									</div>
+									<div class="adv-table__column">
+										<i class="adv-table__icon adv-table__icon_graphic"></i>
+										<i class="adv-table__icon adv-table__icon_edit"></i>
+									</div>
+								</div>
+								{#/ROW#}
+
+								{#ROW#}
+								<div class="adv-table__row">
+									<div class="adv-table__column">
+										<p class="adv-table__text">8</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Kalista</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Banners Vertical</p>
+										<p class="adv-table__text">120x240</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">0</p>
+									</div>
+									<div class="adv-table__column">
+										<i class="adv-table__icon adv-table__icon_graphic"></i>
+										<i class="adv-table__icon adv-table__icon_edit"></i>
+									</div>
+								</div>
+								{#/ROW#}
+
+								{#ROW#}
+								<div class="adv-table__row">
+									<div class="adv-table__column">
+										<p class="adv-table__text">7</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Kalista</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Banners Vertical</p>
+										<p class="adv-table__text">120x240</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">0</p>
+									</div>
+									<div class="adv-table__column">
+										<i class="adv-table__icon adv-table__icon_graphic"></i>
+										<i class="adv-table__icon adv-table__icon_edit"></i>
+									</div>
+								</div>
+								{#/ROW#}
+
+								{#ROW#}
+								<div class="adv-table__row">
+									<div class="adv-table__column">
+										<p class="adv-table__text">6</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Kalista</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Banners Vertical</p>
+										<p class="adv-table__text">120x240</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Yes</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">0</p>
+									</div>
+									<div class="adv-table__column">
+										<i class="adv-table__icon adv-table__icon_graphic"></i>
+										<i class="adv-table__icon adv-table__icon_edit"></i>
+									</div>
+								</div>
+								{#/ROW#}
+
+								{#ROW#}
+								<div class="adv-table__row">
+									<div class="adv-table__column">
+										<p class="adv-table__text">5</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Kalista</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Banners Vertical</p>
+										<p class="adv-table__text">120x240</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">0</p>
+									</div>
+									<div class="adv-table__column">
+										<i class="adv-table__icon adv-table__icon_graphic"></i>
+										<i class="adv-table__icon adv-table__icon_edit"></i>
+									</div>
+								</div>
+								{#/ROW#}
+
+								{#ROW#}
+								<div class="adv-table__row">
+									<div class="adv-table__column">
+										<p class="adv-table__text">4</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Kalista</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Banners Vertical</p>
+										<p class="adv-table__text">120x240</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">0</p>
+									</div>
+									<div class="adv-table__column">
+										<i class="adv-table__icon adv-table__icon_graphic"></i>
+										<i class="adv-table__icon adv-table__icon_edit"></i>
+									</div>
+								</div>
+								{#/ROW#}
+
+								{#ROW#}
+								<div class="adv-table__row">
+									<div class="adv-table__column">
+										<p class="adv-table__text">3</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Kalista</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Banners Vertical</p>
+										<p class="adv-table__text">120x240</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">0</p>
+									</div>
+									<div class="adv-table__column">
+										<i class="adv-table__icon adv-table__icon_graphic"></i>
+										<i class="adv-table__icon adv-table__icon_edit"></i>
+									</div>
+								</div>
+								{#/ROW#}
+
+								{#ROW#}
+								<div class="adv-table__row">
+									<div class="adv-table__column">
+										<p class="adv-table__text">2</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Kalista</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Banners Vertical</p>
+										<p class="adv-table__text">120x240</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">0</p>
+									</div>
+									<div class="adv-table__column">
+										<i class="adv-table__icon adv-table__icon_graphic"></i>
+										<i class="adv-table__icon adv-table__icon_edit"></i>
+									</div>
+								</div>
+								{#/ROW#}
+
+								{#ROW#}
+								<div class="adv-table__row">
+									<div class="adv-table__column">
+										<p class="adv-table__text">1</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Kalista</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">Banners Vertical</p>
+										<p class="adv-table__text">120x240</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text adv-table__text_red">No</p>
+									</div>
+									<div class="adv-table__column">
+										<p class="adv-table__text">0</p>
+									</div>
+									<div class="adv-table__column">
+										<i class="adv-table__icon adv-table__icon_graphic"></i>
+										<i class="adv-table__icon adv-table__icon_edit"></i>
+									</div>
+								</div>
+								{#/ROW#}
+							</div>
+							<div class="table-scroller">
+								<div class="table-scroller__itself"></div>
+								<div class="table-scroller__arrow"></div>
+							</div>
+						</div>
+						{#/ADV TABLE BODY#}
 					</div>
-					{#/ADV TABLE BODY#}
+					<div class="adv-table__link-wrap">
+						<a href="#" target="_blank" class="adv-table__link">Export data to a CSV file</a>
+					</div>
 				</div>
 				{#/ADV TABLE#}
 			</div>
