Add campaigns page

--- a/src/css/blocks/advertisers/adv-table.less
+++ b/src/css/blocks/advertisers/adv-table.less
@@ -6,6 +6,7 @@
 	&__head {
 		margin-bottom: 29px;
 		display: flex;
+		justify-content: space-between;
 	}
 	&__body {
 		//height: 482px;
@@ -53,9 +54,57 @@
 				padding-right: 61px;
 			}
 		}
+		.adv-table_campaigns-adv & {
+			&:first-child {
+				width: 4%;
+				padding-left: 15px;
+			}
+			&:nth-child(2) {
+				width: 10%;
+				text-align: left;
+			}
+			&:nth-child(3) {
+				width: 15%;
+				text-align: left;
+			}
+			&:nth-child(4) {
+				width: 8%;
+				text-align: center;
+			}
+			&:nth-child(5) {
+				width: 8%;
+				text-align: center;
+			}
+			&:nth-child(6) {
+				width: 8%;
+				text-align: center;
+			}
+			&:nth-child(7) {
+				width: 8%;
+				text-align: center;
+			}
+			&:nth-child(8) {
+				width: 8%;
+				text-align: center;
+			}
+			&:nth-child(9) {
+				width: 8%;
+				text-align: center;
+			}
+			&:nth-child(10) {
+				width: 8%;
+				text-align: center;
+			}
+			&:last-child {
+				width: 15%;
+				text-align: right;
+				padding-right: 37px;
+			}
+		}
 	}
 	&__row {
 		display: flex;
+		justify-content: space-between;
 		margin-bottom: 27px;
 	}
 	&__title {
@@ -182,6 +231,62 @@
 					min-width: 50px;
 					//height: 20%;
 					text-align: left;
+					padding-right: 0;
+				}
+			}
+			.adv-table_campaigns-adv & {
+				&:first-child {
+					width: auto;
+					min-width: 50px;
+					padding-left: 0;
+				}
+				&:nth-child(2) {
+					width: auto;
+					min-width: 50px;
+				}
+				&:nth-child(3) {
+					width: auto;
+					min-width: 50px;
+					text-align: left;
+				}
+				&:nth-child(4) {
+					width: auto;
+					min-width: 50px;
+					text-align: left;
+				}
+				&:nth-child(5) {
+					width: auto;
+					min-width: 50px;
+					text-align: left;
+				}
+				&:nth-child(6) {
+					width: auto;
+					min-width: 50px;
+					text-align: left;
+				}
+				&:nth-child(7) {
+					width: auto;
+					min-width: 50px;
+					text-align: left;
+				}
+				&:nth-child(8) {
+					width: auto;
+					min-width: 50px;
+					text-align: left;
+				}
+				&:nth-child(9) {
+					width: auto;
+					min-width: 50px;
+					text-align: left;
+				}
+				&:nth-child(10) {
+					width: auto;
+					min-width: 50px;
+					text-align: left;
+				}
+				&:last-child {
+					width: auto;
+					min-width: 50px;
 					padding-right: 0;
 				}
 			}
