--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -42,6 +42,7 @@
 		<li><a href="01_publishers-advertisers.html">01. Publishers Advertises</a></li>
 		<li><a href="02_new-add-advertisers.html">02. New Add Advertises</a></li>
 		<li><a href="03_ads-advertisers.html">03. Ads Advertises</a></li>
+		<li><a href="04_campaigns-advertisers.html">04. Campaigns Advertises</a></li>
 		<li><a href="06_edit-account-advertisers.html">06. Edit account Advertises</a></li>
 		<li><a href="08_export-advertisers.html">08. Export Advertises</a></li>
 		<li><a href="11_home-advertisers.html">11. Home Advertises</a></li>
