--- a/src/css/blocks/publishers/export.less
+++ b/src/css/blocks/publishers/export.less
@@ -3,28 +3,15 @@
 	max-width: 330px;
 	margin-right: auto;
 	margin-left: auto;
-	padding-bottom: 86px;
 
 	&__title {
 		.medium();
 		font-size: @26;
 		text-align: center;
 		color: #ffffff;
-		padding-top: 40px;
-		padding-bottom: 63px;
+		margin-bottom: 63px;
 		white-space: nowrap;
 	}
-	&__checkbox-text {
-	}
-	//&__over-all {
-	//	//display: none;
-	//}
-	//&__day-by-day {
-	//	display: none;
-	//}
-	//&__month-by-month {
-	//	display: none;
-	//}
 	&__form-select-wrap {
 		padding-bottom: 20px;
 	}
