--- a/src/css/form.less
+++ b/src/css/form.less
@@ -241,7 +241,7 @@
 		display: none;
 		flex-direction: column;
 		justify-content: space-between;
-		height: 70vh;
+		min-height: 420px;
 		&_active {
 			display: flex;
 		}
