--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -43,6 +43,7 @@
 		<li><a href="02_new-add-advertisers.html">02. New Add Advertises</a></li>
 		<li><a href="03_ads-advertisers.html">03. Ads Advertises</a></li>
 		<li><a href="04_campaigns-advertisers.html">04. Campaigns Advertises</a></li>
+		<li><a href="05_create-new-order-advertisers.html">05. Create New Order Advertises</a></li>
 		<li><a href="06_edit-account-advertisers.html">06. Edit account Advertises</a></li>
 		<li><a href="08_export-advertisers.html">08. Export Advertises</a></li>
 		<li><a href="11_home-advertisers.html">11. Home Advertises</a></li>
