Add existing orders page

--- a/src/css/blocks/advertisers/adv-table.less
+++ b/src/css/blocks/advertisers/adv-table.less
@@ -101,6 +101,30 @@
 				padding-right: 37px;
 			}
 		}
+		.adv-table_existing-orders-adv & {
+			text-align: center;
+			&:first-child {
+				width: 14%;
+			}
+			&:nth-child(2) {
+				width: 14%;
+			}
+			&:nth-child(3) {
+				width: 14%;
+			}
+			&:nth-child(4) {
+				width: 14%;
+			}
+			&:nth-child(5) {
+				width: 14%;
+			}
+			&:nth-child(6) {
+				width: 16%;
+			}
+			&:last-child {
+				width: 14%;
+			}
+		}
 	}
 	&__row {
 		display: flex;
@@ -288,6 +312,37 @@
 					width: auto;
 					min-width: 50px;
 					padding-right: 0;
+				}
+			}
+			.adv-table_existing-orders-adv & {
+				text-align: center;
+				&:first-child {
+					width: auto;
+					min-width: 50px;
+				}
+				&:nth-child(2) {
+					width: auto;
+					min-width: 50px;
+				}
+				&:nth-child(3) {
+					width: auto;
+					min-width: 50px;
+				}
+				&:nth-child(4) {
+					width: auto;
+					min-width: 50px;
+				}
+				&:nth-child(5) {
+					width: auto;
+					min-width: 50px;
+				}
+				&:nth-child(6) {
+					width: auto;
+					min-width: 50px;
+				}
+				&:last-child {
+					width: auto;
+					min-width: 50px;
 				}
 			}
 		}
