Add esport ad page

--- a/src/templates/08_export-advertisers.twig
+++ b/src/templates/08_export-advertisers.twig
@@ -12,88 +12,193 @@
 			<h1 class="std-adv__title">Export Data to A CSV File
 			</h1>
 			<div class="std-adv__content">
-				<div class="form">
-					<form>
-						<div class="form__input-container js-form-input-container">
-							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text js-input-text form__input-text_required">Name</p>
+				{#EXPORT#}
+				<div class="export">
+					<div class="export__form">
+						<form>
+							<div class="export__form-select-wrap">
+								<div class="form__select-holder">
+									<select class="form__select" id="export-item-select">
+										<option value="1">Overall Statistic</option>
+										<option value="2">Day-by-day Statistic</option>
+										<option value="3">Month-by-month Statistic</option>
+									</select>
+								</div>
 							</div>
-							<div class="form__input-holder">
-								<input type="text" class="form__input js-form-input">
+
+							{#OVERALL#}
+							<div class="form__export-block form__export-block_active js-export-block" id="export-block_1">
+								<div class="form__up-wrap">
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Ad number</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Campaign number</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Zone number</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Campaign enabled</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Ad approved</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Impressions</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Clicks</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Ratio clicks/impressions</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Unused impressions</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Unused clicks</span>
+									</div>
+								</div>
+
+								<div class="form__down-wrap">
+									<button class="btn btn_block">export</button>
+								</div>
 							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
-							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text js-input-text form__input-text_required">E-mail</p>
+							{#/OVERALL#}
+
+							{#DAY BY DAY#}
+							<div class="form__export-block js-export-block" id="export-block_2">
+
+								<div class="form__up-wrap">
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Ad number</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Campaign number</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Year</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Month</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Day</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Impressions</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Clicks</span>
+									</div>
+								</div>
+
+								<div class="form__down-wrap">
+									<div class="form__date-select-wrap">
+										<div class="form__date-select">
+											<div class="form__date">Month:</div>
+											<div class="form__select-holder form__select-holder_small">
+												<select class="form__select form__select_small">
+													<option>January</option>
+													<option>February</option>
+													<option>March</option>
+													<option>April</option>
+													<option>May</option>
+													<option>June</option>
+													<option>July</option>
+													<option>August</option>
+													<option>September</option>
+													<option>October</option>
+													<option>November</option>
+													<option>December</option>
+												</select>
+											</div>
+										</div>
+
+										<div class="form__date-select">
+											<div class="form__date">Year:</div>
+											<div class="form__input-holder">
+												<input type="text" class="form__input form__input_small">
+											</div>
+										</div>
+									</div>
+									<button class="btn btn_block">export</button>
+								</div>
+
 							</div>
-							<div class="form__input-holder">
-								<input type="text" class="form__input js-form-input">
+							{#/DAY BY DAY#}
+
+							{#MONTH BY MONTH#}
+							<div class=" form__export-block js-export-block" id="export-block_3">
+
+								<div class="form__up-wrap">
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Ad number</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Campaign number</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Year</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Month</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Impressions</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Clicks</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox-small">
+										<span class="form__checkbox-text">Ratio clicks/impressions</span>
+									</div>
+								</div>
+
+								<div class="form__down-wrap">
+									<div class="form__date-select-wrap">
+
+										<div class="form__date-select">
+											<div class="form__date">Year:</div>
+											<div class="form__input-holder">
+												<input type="text" class="form__input form__input_small">
+											</div>
+										</div>
+									</div>
+									<button class="btn btn_block">export</button>
+								</div>
+
 							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
-							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text js-input-text">Password</p>
-								<p class="form__input-under-text">Keep it blank to use the current password</p>
-							</div>
-							<div class="form__input-holder">
-								<input type="password" class="form__input">
-							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
-							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text js-input-text">Company name</p>
-							</div>
-							<div class="form__input-holder">
-								<input type="text" class="form__input js-form-input">
-							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
-							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text js-input-text">Business ID</p>
-							</div>
-							<div class="form__input-holder">
-								<input type="text" class="form__input js-form-input">
-							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
-							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text js-input-text">City</p>
-							</div>
-							<div class="form__input-holder">
-								<input type="text" class="form__input js-form-input">
-							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
-							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text js-input-text">Country</p>
-							</div>
-							<div class="form__input-holder">
-								<input type="text" class="form__input js-form-input">
-							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
-							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text js-input-text">Phone number</p>
-							</div>
-							<div class="form__input-holder">
-								<input type="text" class="form__input js-form-input">
-							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
-							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text js-input-text">Style</p>
-							</div>
-							<div class="form__select-holder">
-								<select class="form__select">
-									<option value="1">Silver</option>
-									<option value="2">Silver</option>
-									<option value="3">Silver</option>
-									<option value="4">Silver</option>
-								</select>
-							</div>
-						</div>
-					</form>
+							{#/MONTH BY MONTH#}
+						</form>
+					</div>
 				</div>
+				{#/EXPORT#}
 			</div>
 		</div>
 	</div>
