--- a/src/css/blocks/publishers/publishers.less
+++ b/src/css/blocks/publishers/publishers.less
@@ -150,13 +150,14 @@
 		}
 		&__table-block {
 			padding: 7px 0 12px 4px;
+
 		}
 		&__table-block-inner {
 			overflow: auto;
-			max-height: 100%;
-			overflow-x: hidden;
-			margin-bottom: -20px;
+			overflow-y: hidden;
 			display: flex;
+			margin-right: 0;
+			margin-bottom: -30px;
 		}
 		&__table-row {
 			margin-bottom: 0;
