--- a/src/css/main.less
+++ b/src/css/main.less
@@ -16,6 +16,7 @@
 	@import "blocks/footer";
 	@import "blocks/chart";
 	@import "blocks/table-scroller";
+	@import "blocks/up-arrow";
 
 
 	//PUBLISHERS
@@ -23,7 +24,6 @@
 	@import "blocks/publishers/places";
 	@import "blocks/publishers/paymen-info";
 	@import "blocks/publishers/payments-list";
-	@import "blocks/publishers/up-arrow";
 	@import "blocks/publishers/export";
 
 	//GUEST
