Finish home adv page

--- a/src/templates/09_home-advertisers.twig
+++ b/src/templates/09_home-advertisers.twig
@@ -7,13 +7,13 @@
 
 {% block content %}
 {#HOME ADVERTISERS#}
-	<div class="home-adv"  style="background-image: url(img/contact-us-bg.jpg)">
-		<div class="home-adv__container container">
-			<h1 class="home-adv__title">Welcome back !</h1>
-			<div class="home-adv__content">
-				<div class="home-adv__chart" id="home-adv-chart" style="height: 500px;"></div>
+	<div class="std-adv std-adv_home"  style="background-image: url(img/contact-us-bg.jpg)">
+		<div class="std-adv__container container">
+			<h1 class="std-adv__title">Welcome back !</h1>
+			<div class="std-adv__content">
+				<div class="std-adv__chart" id="home-adv-chart"></div>
 			</div>
-			<p class="home-adv__subtitle">Countries where your ads have been displayed in December 2017</p>
+			<p class="std-adv__title std-adv__title_bottom">Countries where your ads have been displayed in December 2017</p>
 		</div>
 	</div>
 {#/HOME ADVERTISERS#}
