--- a/src/css/blocks/advertisers/std-adv.less
+++ b/src/css/blocks/advertisers/std-adv.less
@@ -91,7 +91,7 @@
 
 @media screen and (max-width: 768px) {
 	.std-adv {
-
+		padding-top: 40px + 43px;
 		&__container {
 			.std-adv_home & {
 				padding-left: 0;
