--- a/src/css/blocks/header.less
+++ b/src/css/blocks/header.less
@@ -7,6 +7,13 @@
 		background: #F3F5F8;
 		padding-top: 22px;
 		padding-bottom: 27px;
+
+		&.fixed {
+			position: fixed;
+			top: 0;
+			left: 0;
+			right: 0;
+		}
 	}
 
 	&__container {
@@ -347,6 +354,8 @@
 			padding-top: 12px;
 			padding-bottom: 10px;
 			z-index: 30;
+			position: fixed;
+			width: 100%;
 		}
 
 		&__burger {
