--- a/src/css/blocks/publishers/publishers.less
+++ b/src/css/blocks/publishers/publishers.less
@@ -117,6 +117,12 @@
 	}
 }
 
+@media screen and (max-width: 768px) {
+	.publishers {
+		padding-top: 43px;
+	}
+}
+
 @media screen and (max-width: 700px) {
 	.publishers {
 		&__table {
